--- a/build.gradle
+++ b/build.gradle
@@ -32,3 +32,10 @@ dependencies {
 test {
 	useJUnitPlatform()
 }
+
+
+jar {
+	manifest {
+		attributes 'Main-Class': 'unisinos.teoriainformacao.compressao.Program'
+	}
+}
